updated map and sidenav colors

--- a/public/index.html
+++ b/public/index.html
@@ -55,10 +55,10 @@
             autoZoom : false,
             color: "#B4B4B7",
             colorSolid: "#84ADE9",
-            selectedColor: "#84ADE9",
+            selectedColor: "#FAC10B",
             outlineColor: "#666666",
-            rollOverColor: "#9EC2F7",
-            rollOverOutlineColor: "#000000"
+            rollOverColor: "rgba(0,0,0,0.8)",
+            rollOverOutlineColor: "rgba(0,0,0,0.8)"
           },
           "listeners": [ {
             "event": "clickMapObject",
@@ -127,10 +127,10 @@
             autoZoom : false,
             color: "#B4B4B7",
             colorSolid: "#84ADE9",
-            selectedColor: "#84ADE9",
+            selectedColor: "#FAC10B",
             outlineColor: "#666666",
-            rollOverColor: "#9EC2F7",
-            rollOverOutlineColor: "#000000"
+            rollOverColor: "rgba(0,0,0,0.8)",
+            rollOverOutlineColor: "rgba(0,0,0,0.8)"
           },
           "listeners": [ {
             "event": "clickMapObject",
